[package]
name = "cmz"
version = "0.1.0"
edition = "2021"

[dependencies]
cmz_derive = { path = "cmz_derive" }
ff = "0.13"
generic_static = "0.2"
group = "0.13"
hex = { version = "0.4", features = [ "serde" ] }
lazy_static = "1"
rand = "0.8.5"
serde = { version = "1", features = [ "derive" ] }
serde_bytes = "0.11"
serde_with = "3"
sigma_compiler = { path = "../sigma_compiler" }
thiserror = "2"

[dev-dependencies]
bincode = "1"
curve25519-dalek = { version = "4", features = [ "group", "rand_core", "digest" ] }
sha2 = "0.10"
