[package]
name = "cmz-core"
version = "0.1.0-rc2"
edition = "2021"
license = "MIT"
repository = "https://git-crysp.uwaterloo.ca/SigmaProtocol/cmz"
description = "Core functionality for the macros in the cmz crate"

[dependencies]
syn = { version = "2.0", features = ["extra-traits", "visit-mut"] }
quote = "1.0"
darling = "0.20"
proc-macro2 = "1.0"
clap = { version = "4.5", features = ["derive"] }
prettyplease = "0.2"
