[package]
name = "cmz-derive"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://git-crysp.uwaterloo.ca/SigmaProtocol/cmz"
description = "Derive macros for the cmz crate"

[lib]
proc-macro = true

[dependencies]
cmz-core = "0.1.0"
syn = { version = "2.0", features = ["extra-traits", "visit-mut"] }
quote = "1.0"
darling = "0.20"
proc-macro2 = "1.0"

[patch.crates-io]
cmz-core = { path = "../cmz-core" }
